test/libhyperion/syntaxTests/nameAndTypeResolution/407_invalid_address_no_checksum.hyp
contract C {
    function f() pure public {
        address x = Z2c583f3e18be64d3380561d6a96d7f61d405ad50b47fee6a;
        x;
    }
}
// ----
// SyntaxError 9429: (64-105): This looks like an address but has an invalid checksum. Correct checksummed address: "Z2C583F3e18bE64D3380561d6a96d7F61D405Ad50b47feE6A".
